2012-02-27 12:49  paddockd

	* [r317] ChangeLog,
	  contrib/makefile.linux26-armel-nofpu-alsa-display,
	  contrib/makefile.linux26-armel-nofpu-oss-display,
	  patches/tremor-r18153-version-script.patch,
	  sources/tremor-r18153.tar.bz2, src/squeezeslave/squeezeslave.c:
	  Added tremor fixed point vorbis library r18153 and build patch.
	  Updated tremor library in squeezeplug makefiles to r18153.
	  Updated ogg library in squeezeplug makefiles to 1.2.2.
	  Increased revision to 317.

2012-02-17 21:07  paddockd

	* [r316] ChangeLog, src/squeezeslave/help.c,
	  src/squeezeslave/squeezeslave.c: Updated changelog.
	  Updated year in copyright notice.
	  Increased revision to 316.

2012-02-15 12:39  paddockd

	* [r313] ChangeLog, scripts/buildall-lnx24, scripts/createpaexp:
	  Build script updates for 1.2-311 release.

2012-01-10 11:57  paddockd

	* [r312] ChangeLog, contrib/makefile.freebsd,
	  contrib/makefile.freebsd-i386: Updated freebsd intel makefile to
	  support building on 8.2.
	  Added -i386 to freebsd intel makefile name.

2011-12-22 12:57  paddockd

	* [r311] ChangeLog, src/slimproto/slimproto.c,
	  src/squeezeslave/squeezeslave.c, tests/find_servers.c: Fixed
	  slimproto_discover for windows, winsock not initialized when
	  scanning.
	  Applied winsock fix to testbed find_servers.c.
	  Increased revision to 311.

2011-12-21 16:53  paddockd

	* [r310] ChangeLog, src/slimproto/slimproto.c,
	  src/slimproto/slimproto.h, src/squeezeslave/help.c,
	  src/squeezeslave/squeezeslave.c, src/squeezeslave/squeezeslave.h:
	  Fixed slimproto_discover failure when a local SBS is running.
	  Thanks to gharris999 for finding this one and suggesting a fix.
	  Updated slimproto_discover to support findservers option,
	  retrieve JSON port as well as the IP address.
	  Added -I/--findservers option to list servers found via UDP
	  discovery.
	  Increased firmware version to 7.
	  Increased version to 1.2.
	  Increased revision to 310.

2011-12-06 13:32  paddockd
